# GaoKaoStat

./: .gitignore  README.md  diag.py  extra_info.py  main.py  plot.py  pyproject.toml  stat.py  stat_analyse.py
data/: henan_2025_history_scores.csv  liaoning_2025_history_score_distribution.csv  liaoning_2025_physics_score_distribution.csv  上海_2025.csv  云南_2025_历史类.csv  云南_2025_物理类.csv  内蒙古_2025_历史类.csv  内蒙古_2025_物理类.csv  北京_2025.csv  吉林_2025_历史类.csv  吉林_2025_物理类.csv  四川_2025_历史类.csv  四川_2025_物理类.csv  天津_2025.csv  宁夏_2025_历史类.csv  宁夏_2025_历史类_fused.txt  宁夏_2025_物理类.csv  安徽_2025_历史类.csv  安徽_2025_物理类.csv  山东_2025.csv  山西_2025_历史类.csv  山西_2025_物理类.csv  广东_2025_历史类.csv  广东_2025_物理类.csv  广西_2025_历史类.csv  广西_2025_物理类.csv  江苏_2025_历史类.csv  江苏_2025_物理类.csv  江西_2021_历史类.csv  江西_2022_历史类.csv  江西_2023_历史类.csv  江西_2024_历史类.csv  江西_2025_历史类.csv  江西_2025_物理类.csv  河北_2025_历史类.csv  河北_2025_物理类.csv  河南_2025_物理类.csv  浙江_2025.csv  海南_2025.csv  湖北_2025_历史类.csv  (+17 more)
